additional saved work for risk analysis

--- a/risk_return_analysis.ipynb
+++ b/risk_return_analysis.ipynb
@@ -1063,7 +1063,7 @@
    "source": [
     "**Question 3** Based on the rolling standard deviations of only the four fund portfolios, which portfolio poses the most risk? Does this change over time? \n",
     "\n",
-    "**Answer 3** On the whole, Berkshire Hathaway poses the most risk in terms of annualized standard deviation. At roughly the beginning of 2019 Tiger Global Management's fund begins to match Berkshire Hathaway's annualized standard deviation"
+    "**Answer 3** On the whole, Berkshire Hathaway poses the most risk in terms of annualized standard deviation. At roughly the beginning of 2019 Tiger Global Management's fund begins to match Berkshire Hathaway's annualized standard deviation, and continues to do so for the remainder of the analysis period."
    ]
   },
   {
