--- a/additional_risk_return_ratios.ipynb
+++ b/additional_risk_return_ratios.ipynb
@@ -15,11 +15,11 @@
    "id": "a4c029da-3d95-496c-91e5-067e7349c245",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-26T21:33:37.949229Z",
-     "iopub.status.busy": "2021-12-26T21:33:37.948901Z",
-     "iopub.status.idle": "2021-12-26T21:33:40.851058Z",
-     "shell.execute_reply": "2021-12-26T21:33:40.850454Z",
-     "shell.execute_reply.started": "2021-12-26T21:33:37.949195Z"
+     "iopub.execute_input": "2021-12-26T23:35:10.021362Z",
+     "iopub.status.busy": "2021-12-26T23:35:10.021029Z",
+     "iopub.status.idle": "2021-12-26T23:35:12.963734Z",
+     "shell.execute_reply": "2021-12-26T23:35:12.962888Z",
+     "shell.execute_reply.started": "2021-12-26T23:35:10.021311Z"
     }
    },
    "outputs": [],
@@ -50,11 +50,11 @@
    "id": "84671dd2-7fd8-4407-8967-37ff85150ee2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-26T21:33:49.477363Z",
-     "iopub.status.busy": "2021-12-26T21:33:49.469889Z",
-     "iopub.status.idle": "2021-12-26T21:33:49.515324Z",
-     "shell.execute_reply": "2021-12-26T21:33:49.512857Z",
-     "shell.execute_reply.started": "2021-12-26T21:33:49.477311Z"
+     "iopub.execute_input": "2021-12-26T23:35:12.965140Z",
+     "iopub.status.busy": "2021-12-26T23:35:12.964860Z",
+     "iopub.status.idle": "2021-12-26T23:35:12.989138Z",
+     "shell.execute_reply": "2021-12-26T23:35:12.988531Z",
+     "shell.execute_reply.started": "2021-12-26T23:35:12.965115Z"
     }
    },
    "outputs": [
@@ -186,15 +186,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "4f999ce3-077d-4c10-9710-4eeb9a7aa22d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-26T22:51:06.301597Z",
-     "iopub.status.busy": "2021-12-26T22:51:06.301275Z",
-     "iopub.status.idle": "2021-12-26T22:51:06.315101Z",
-     "shell.execute_reply": "2021-12-26T22:51:06.314326Z",
-     "shell.execute_reply.started": "2021-12-26T22:51:06.301571Z"
+     "iopub.execute_input": "2021-12-26T23:35:12.990350Z",
+     "iopub.status.busy": "2021-12-26T23:35:12.989977Z",
+     "iopub.status.idle": "2021-12-26T23:35:13.004414Z",
+     "shell.execute_reply": "2021-12-26T23:35:13.003738Z",
+     "shell.execute_reply.started": "2021-12-26T23:35:12.990323Z"
     },
     "tags": []
    },
@@ -298,7 +298,7 @@
        "2014-10-08                     0.000242                0.000842  0.017489  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,15 +317,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "268e348b-53a1-4896-89e3-77744bcc5a76",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-26T22:51:23.864290Z",
-     "iopub.status.busy": "2021-12-26T22:51:23.863855Z",
-     "iopub.status.idle": "2021-12-26T22:51:23.876744Z",
-     "shell.execute_reply": "2021-12-26T22:51:23.875651Z",
-     "shell.execute_reply.started": "2021-12-26T22:51:23.864256Z"
+     "iopub.execute_input": "2021-12-26T23:35:13.005640Z",
+     "iopub.status.busy": "2021-12-26T23:35:13.005330Z",
+     "iopub.status.idle": "2021-12-26T23:35:13.017270Z",
+     "shell.execute_reply": "2021-12-26T23:35:13.016607Z",
+     "shell.execute_reply.started": "2021-12-26T23:35:13.005608Z"
     },
     "tags": []
    },
@@ -388,7 +388,7 @@
        "s&p_500                          0.714305"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,15 +423,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "ca8cbb00-22ac-4467-90c1-03283cab80d4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-26T22:51:52.146322Z",
-     "iopub.status.busy": "2021-12-26T22:51:52.146022Z",
-     "iopub.status.idle": "2021-12-26T22:51:52.158366Z",
-     "shell.execute_reply": "2021-12-26T22:51:52.157617Z",
-     "shell.execute_reply.started": "2021-12-26T22:51:52.146292Z"
+     "iopub.execute_input": "2021-12-26T23:35:13.019025Z",
+     "iopub.status.busy": "2021-12-26T23:35:13.018585Z",
+     "iopub.status.idle": "2021-12-26T23:35:13.033814Z",
+     "shell.execute_reply": "2021-12-26T23:35:13.032913Z",
+     "shell.execute_reply.started": "2021-12-26T23:35:13.018987Z"
     },
     "tags": []
    },
@@ -500,7 +500,7 @@
        "s&p_500                          0.714305       0.894260"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,15 +526,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "45e3ba09-f492-4f5c-ace7-629b9d8fd06c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-26T23:07:38.298319Z",
-     "iopub.status.busy": "2021-12-26T23:07:38.297802Z",
-     "iopub.status.idle": "2021-12-26T23:07:38.308962Z",
-     "shell.execute_reply": "2021-12-26T23:07:38.308076Z",
-     "shell.execute_reply.started": "2021-12-26T23:07:38.298286Z"
+     "iopub.execute_input": "2021-12-26T23:35:13.035597Z",
+     "iopub.status.busy": "2021-12-26T23:35:13.035228Z",
+     "iopub.status.idle": "2021-12-26T23:35:13.046732Z",
+     "shell.execute_reply": "2021-12-26T23:35:13.045848Z",
+     "shell.execute_reply.started": "2021-12-26T23:35:13.035567Z"
     },
     "tags": []
    },
@@ -550,7 +550,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,15 +565,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "c985732c-6292-447d-99dd-42f6b95c6d74",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-26T23:08:36.665623Z",
-     "iopub.status.busy": "2021-12-26T23:08:36.665173Z",
-     "iopub.status.idle": "2021-12-26T23:08:36.674479Z",
-     "shell.execute_reply": "2021-12-26T23:08:36.673924Z",
-     "shell.execute_reply.started": "2021-12-26T23:08:36.665588Z"
+     "iopub.execute_input": "2021-12-26T23:35:13.048505Z",
+     "iopub.status.busy": "2021-12-26T23:35:13.048049Z",
+     "iopub.status.idle": "2021-12-26T23:35:13.057978Z",
+     "shell.execute_reply": "2021-12-26T23:35:13.057284Z",
+     "shell.execute_reply.started": "2021-12-26T23:35:13.048475Z"
     }
    },
    "outputs": [
@@ -647,7 +647,7 @@
        "s&p_500                          0.714305       0.894260      0.486772"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,15 +669,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "a7732425-6f5d-462c-ba93-e4dc0ff0414e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-26T23:20:13.844761Z",
-     "iopub.status.busy": "2021-12-26T23:20:13.844465Z",
-     "iopub.status.idle": "2021-12-26T23:20:13.864574Z",
-     "shell.execute_reply": "2021-12-26T23:20:13.863788Z",
-     "shell.execute_reply.started": "2021-12-26T23:20:13.844733Z"
+     "iopub.execute_input": "2021-12-26T23:35:13.060430Z",
+     "iopub.status.busy": "2021-12-26T23:35:13.059791Z",
+     "iopub.status.idle": "2021-12-26T23:35:13.079196Z",
+     "shell.execute_reply": "2021-12-26T23:35:13.077935Z",
+     "shell.execute_reply.started": "2021-12-26T23:35:13.060372Z"
     },
     "tags": []
    },
@@ -765,7 +765,7 @@
        "s&p_500                                    NaN  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,21 +786,21 @@
    "id": "c4d44b72-6af4-46a7-ac63-4323ef2c8b12",
    "metadata": {},
    "source": [
-    "## Modigliani Ratio  \n",
+    "## Modigliani Ratio (M2 Ratio)  \n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "id": "aa1b4a2c-f8a9-442a-81e9-be4e3d284bd8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-26T23:29:50.088172Z",
-     "iopub.status.busy": "2021-12-26T23:29:50.087861Z",
-     "iopub.status.idle": "2021-12-26T23:29:50.102029Z",
-     "shell.execute_reply": "2021-12-26T23:29:50.101223Z",
-     "shell.execute_reply.started": "2021-12-26T23:29:50.088139Z"
+     "iopub.execute_input": "2021-12-26T23:35:13.082114Z",
+     "iopub.status.busy": "2021-12-26T23:35:13.081666Z",
+     "iopub.status.idle": "2021-12-26T23:35:13.098175Z",
+     "shell.execute_reply": "2021-12-26T23:35:13.097258Z",
+     "shell.execute_reply.started": "2021-12-26T23:35:13.082035Z"
     },
     "tags": []
    },
@@ -830,7 +830,7 @@
        "      <th>sortino_ratio</th>\n",
        "      <th>calmar_ratio</th>\n",
        "      <th>information_ratio</th>\n",
-       "      <th>modigliani_ratio</th>\n",
+       "      <th>m2_ratio</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -886,15 +886,15 @@
        "berkshire_hathaway_inc           0.528679       0.701791      0.209938   \n",
        "s&p_500                          0.714305       0.894260      0.486772   \n",
        "\n",
-       "                             information_ratio  modigliani_ratio  \n",
-       "soros_fund_management_llc            -0.792278         -0.039983  \n",
-       "paulson_&_co.inc.                    -0.776491         -0.017585  \n",
-       "tiger_global_management_llc          -0.698932          0.103441  \n",
-       "berkshire_hathaway_inc               -0.610553          0.096931  \n",
-       "s&p_500                                    NaN               NaN  "
+       "                             information_ratio  m2_ratio  \n",
+       "soros_fund_management_llc            -0.792278 -0.039983  \n",
+       "paulson_&_co.inc.                    -0.776491 -0.017585  \n",
+       "tiger_global_management_llc          -0.698932  0.103441  \n",
+       "berkshire_hathaway_inc               -0.610553  0.096931  \n",
+       "s&p_500                                    NaN       NaN  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,7 +902,7 @@
    "source": [
     "# Calculate the Modigliani Ratio\n",
     "benchmark_annl_volatility = daily_returns['s&p_500'].std() * np.sqrt(252)\n",
-    "risk_ratios_df['modigliani_ratio'] = risk_ratios_df.iloc[:-1, 0].mul(\n",
+    "risk_ratios_df['m2_ratio'] = risk_ratios_df.iloc[:-1, 0].mul(\n",
     "    benchmark_annl_volatility,\n",
     "    axis='index'\n",
     ") + 0  # 0 represents the risk-free rate of return\n",
